# fastapi_poetry_docker

./: Dockerfile  README.md
project/: .env  main.py  pyproject.toml  requirements.txt
project/app/: api.py  database.py  schemas.py
project/app/auth/: auth.py
project/pytest/: tests.py
